# Sensor-pipeline

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  test.py
colcon_ws/log/: latest_build
colcon_ws/src/sensor_streamer/: package.xml  setup.cfg  setup.py
colcon_ws/src/sensor_streamer/config/: synthetic.yaml  synthetic_params.yaml
colcon_ws/src/sensor_streamer/sensor_streamer/: generator.py  replay.py  sensor_play.py
custom_lib/: .gitignore  CMAKE_README.md  CMakeLists.txt  EXTENSIBILITY.md  README_python.md  build.sh  demo_python_bindings.py  examples.py  mavg.cpp  mavg.hpp  python_bindings.cpp  setup.py  simple_test.py  test_low_pass_filter.py  test_low_pass_simple.py  test_mavg.cpp  test_python_bindings.py
custom_lib/filters/: README.md  README_python.md  example_usage.py  setup.py
custom_lib/filters/lib/: base_filter.hpp  base_iir_filter.hpp  fixed_point_low_pass_filter.hpp  float_low_pass_filter.hpp  low_pass_filter.hpp
custom_lib/filters/src/: filter_bindings.cpp  py_filter_module.cpp
custom_lib/lib/: fixed_moving_average.hpp  low_pass_filter.hpp  mavg.hpp  ring_buffer.hpp  time_duration_moving_average.hpp
custom_lib/moving_avg/lib/: fixed_moving_average.hpp  time_duration_moving_average.hpp
custom_lib/moving_avg/src/: py_moving_average_bindings.cpp  py_moving_average_module.cpp
custom_lib/running_data/: README.md
custom_lib/running_data/lib/: fixed_moving_average.hpp  median_filter.hpp  time_duration_moving_average.hpp
custom_lib/running_data/src/: median_filter_bindings.cpp  py_median_filter_module.cpp  py_moving_average_bindings.cpp  py_moving_average_module.cpp
custom_lib/src/: py_moving_average_bindings.cpp  py_moving_average_module.cpp
custom_lib/test/: CMakeLists.txt  test_filter_bindings.py
custom_lib/test/filters/: test_low_pass_filter.py  test_low_pass_simple.py
custom_lib/test/moving_avg/: test_python_bindings.py
custom_lib/test/running_data/: test_python_bindings.py
custom_lib/tools/: fixed_heap.hpp  fixed_priority_queue.hpp  q_value.hpp  ring_buffer.hpp
imu_analysis/: cleaner.py  fft.py  plot_imu.py  plotter.py
